--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,8 @@ log = "0.4.17"
 num_enum = "0.5.9"
 thiserror = "1.0.38"
 unicode-segmentation = "1.10.1"
+
+[dev-dependencies]
+regex = "1.7.1"
+once_cell = "1.17.0"
+paste = "1.0.11"
